--- a/template/detail.html
+++ b/template/detail.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-md-8 mx-auto">
+        <div>
             <img src="{{ project.img.url }}" class="img-fluid rounded" alt="{{ project.name }}">
             <h1 class="mt-4">{{ project.name }}</h1>
             <p class="lead text-white">{{ project.description }}</p>
