--- a/template/home.html
+++ b/template/home.html
@@ -1,9 +1,39 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Home
+ Diyorbek's resume
 {% endblock %}
 
 {% block content %}
-     <img src="/media/images/photo.png" class="rounded mx-auto d-block" alt="." width="200" height="200">
+
+
+
+
+    <!-- About Section -->
+    <section id="about" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-4">About Me</h2>
+            <h3 class="center">Diyorbek Xazratqulov</h3>
+            <h4>Backend developer</h4>
+
+            <p>Ismim Diyorbek yoshim 20da.Men junior backend dasturchiman.
+                Men python dasturlash tili va asosan django va django rest frameworklar orqali saytning
+                backend qismini yartaman.Kurslarda va universitetda o'rganganlarim asosan django
+                va django rest framework bo'lsada lekin o'zim Flask va FastApi frameworklarini
+                mustaqil ma'lum bir darajada o'rgandim.</p>
+        </div>
+    </section>
+
+
+
+    <!-- Footer -->
+    <footer class="bg-orange text-white text-center py-3">
+        <div class="container" >
+            <p style="background-color:blue">&copy; 2024 Diyorbek</p>
+        </div>
+    </footer>
+
+
+
+
 {% endblock %}
