--- a/template/base.html
+++ b/template/base.html
@@ -7,11 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
         .navbar-custom {
-            background-color: #008080; /* Adjust this color to match the desired navbar color */
+            background-color: #24DD87; /* Adjust this color to match the desired navbar color */
+        }
+        body {
+            background-color: #EFF5D9; /* Set the background color to yellow */
         }
     </style>
 </head>
-<body class="bg-dark">
+<body>
     <nav class="navbar shadow navbar-expand-lg navbar-dark navbar-custom">
         <div class="container">
             <a class="navbar-brand" href="/">About me</a>
