--- a/template/contacts.html
+++ b/template/contacts.html
@@ -5,34 +5,25 @@
 {%endblock%}
 
 {%block content%}
+
   <div class="container">
-    <section id="contacts" class="mt-5">
+    <section id="contacts" class="mt-5 animate__animated animate__fadeIn">
       <h2>Contact</h2>
       <div class="row">
         <div class="col-md-6">
-          <form>
-            <div class="mb-3">
-              <label for="name" class="form-label">Name</label>
-              <input type="text" class="form-control" id="name" placeholder="Enter your name">
-            </div>
-            <div class="mb-3">
-              <label for="email" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="email" placeholder="Enter your email">
-            </div>
-            <div class="mb-3">
-              <label for="message" class="form-label">Message</label>
-              <textarea class="form-control" id="message" rows="5" placeholder="Enter your message"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+          <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+          <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
         <div class="col-md-6">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Contact Information</h5>
-                <p class="card-text">Mening kantaklarim</p>
               <p class="card-text">Email: xazratqulovdiyorbek2004@gmail.com</p>
               <p class="card-text">Phone: +998 33 636 36 66</p>
+              <p class="card-text"><a href="https://Github.com/Diyorbektuit">Github</a></p>
             </div>
           </div>
         </div>
@@ -41,4 +32,3 @@
   </div>
 
 {%endblock%}
-
