--- a/template/education.html
+++ b/template/education.html
@@ -5,14 +5,17 @@
 {% endblock %}
 
 {% block content %}
+
     <section id="education" class="mt-5">
         <h2>Education</h2>
         <div class="row">
             <div class="col-md-6">
                 <div class="card mb-3">
-                    <img src="/media/images/university_image.jpg" class="card-img-top" alt="University Image">
+
+                    <img src="/media/images/university_image.jpg" class="card-img-top education-image" alt="University Image" width="400" height="350">
                     <div class="card-body">
                         <h5 class="card-title">Tashkent University of Information Technologies</h5>
+                        <h6 class="card-title">Software engineering </h6>
                         <p class="card-text">Tashkent City, Amir Temur street</p>
                         <p class="card-text"><small class="text-muted">September 2022 - June 2026</small></p>
                     </div>
@@ -20,9 +23,10 @@
             </div>
             <div class="col-md-6">
                 <div class="card mb-3">
-                    <img src="/media/images/learning_centre_image.jpg" class="card-img-top" alt="Learning Centre Image">
+                    <img src="/media/images/learning_centre_image.jpg" class="card-img-top education-image" alt="Learning Centre Image" width="400" height="350">
                     <div class="card-body">
                         <h5 class="card-title">Najot ta'lim learning centre</h5>
+                        <h6 class="card-title">Python Backend </h6>
                         <p class="card-text">Tashkent City, Chilonzor-9</p>
                         <p class="card-text"><small class="text-muted">February 2023 - August 2023</small></p>
                     </div>
